--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development VITE_SOURCEMAP=inline vite build --watch",
     "build": "cross-env NODE_ENV=production vite build",
-    "make-link": "node --no-warnings ./scripts/make_dev_link.js",
-    "make-link-win": "powershell.exe -NoProfile -ExecutionPolicy Bypass -File ./scripts/elevate.ps1 -scriptPath ./scripts/make_dev_link.js",
-    "update-version": "node --no-warnings ./scripts/update_version.js",
-    "make-install": "vite build && node --no-warnings ./scripts/make_install.js"
+    "make-link": "npx make-link-win",
+    "update-version": "npx update-version",
+    "make-install": "vite build && npx make-installclear",
+    "auto-i18n": "i18n extract && i18n translate && i18n export"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
