--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "make-link": "npx make-link-win",
     "update-version": "npx update-version",
     "make-install": "vite build && npx make-installclear",
-    "auto-i18n": "i18n extract && i18n translate && i18n export"
+    "auto-i18n": "i18n extract && i18n translate && i18n export",
+    "gen-types": "node scripts/generate-types.js"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
@@ -28,7 +29,8 @@
     "sass": "^1.63.3",
     "siyuan": "1.0.4",
     "svelte": "^4.2.19",
-    "ts-node": "^10.9.1",
+    "ts-morph": "^24.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.3",
     "vite": "^5.2.9",
     "vite-plugin-static-copy": "^1.0.2",
