--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sy-query-view",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0-beta2",
   "type": "module",
   "description": "This is a sample plugin based on vite and svelte for Siyuan (https://b3log.org/siyuan). Created with siyuan-plugin-cli v2.4.5.",
   "repository": "https://github.com/frostime/sy-query-view",
@@ -12,7 +12,7 @@
     "build": "npm run export-types && cross-env NODE_ENV=production vite build && npm run replace-md-file ./dist",
     "make-link": "npx make-link-win",
     "update-version": "npx update-version",
-    "make-install": "vite build && npx make-installclear",
+    "make-install": "vite build && npx make-install",
     "auto-i18n": "i18n extract && i18n translate && i18n export",
     "export-types": "node scripts/export-types.js",
     "replace-md-file": "node scripts/replace-md-file.js"
