--- a/auto-i18n.project.yaml
+++ b/auto-i18n.project.yaml
@@ -19,6 +19,11 @@ code_files:
 - src/**/*.svelte
 dict:
   - 思源翻译为 SiYuan
+  - QueryView, DataView 这些专有名词, 不用翻译, 保持原名
+  - "视图组件" 翻译成 "View Component"
+  - "块" 是思源笔记中的基本单位，翻译成 Block
+  - 嵌入块 翻译成 Embed Block
+  - "反向链接" 或者 "反链" 翻译成 "backlink"
 export_dir: src/types
 i18n_dir: public/i18n
 i18n_pattern: \(\(`(.+?)`\)\)
@@ -26,3 +31,6 @@ i18n_var_mid: pathname
 i18n_var_prefix: i18n
 main_file: zh_CN.yaml
 strategy: diff
+global_config:
+  GPT:
+    model: doubao-pro-128k
